--- a/htg_kusimustik.html
+++ b/htg_kusimustik.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Survey Redirect</title>
     <script type="text/javascript">
-      var formUrlA = 'URL_OF_FORM_A';
-      var formUrlB = 'URL_OF_FORM_B';
+      var formUrlA = 'https://forms.gle/bm7zbeNWST4jkkWa9';
+      var formUrlB = 'https://forms.gle/7u2HSPPPntygo6HZ6';
       window.onload = function() {
         var formUrl = (Math.random() < 0.5) ? formUrlA : formUrlB;
         window.location.href = formUrl;
